--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <title>Vite + React + TS</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body dir="rtl">
+    <div id="root" style="width: 100%; height: 100%;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
