--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
 
-    <title>דוב</title>
+    <title>דו"ב</title>
   </head>
   <body dir="rtl">
     <div id="root" style="width: 100%; height: 100%;"></div>
